New IRouteDataProvider model to abstract building of route data by the walker. Allows walking to be done once per request, and then re-used where necessary.

--- a/Superscribe.Owin/Superscribe.Owin.csproj
+++ b/Superscribe.Owin/Superscribe.Owin.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Constants.cs" />
     <Compile Include="Engine\IOwinRouteEngine.cs" />
+    <Compile Include="Engine\OwinRouteDataProvider.cs" />
     <Compile Include="Engine\OwinRouteEngine.cs" />
     <Compile Include="Engine\OwinRouteEngineFactory.cs" />
     <Compile Include="Pipelining\Middleware.cs" />
