--- a/Superscribe.WebApi.Owin/Superscribe.WebApi.Owin.nuspec
+++ b/Superscribe.WebApi.Owin/Superscribe.WebApi.Owin.nuspec
@@ -9,8 +9,8 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Superscribe extensions for working with Web API 2 on OWIN-compatible hosts</description>
     <dependencies>
-	  <dependency id="Superscribe" version="(0.3.1,0.4.0)" />	
-    <dependency id="Superscribe.Owin" version="(0.3.1,0.4.0)" /> 
+	  <dependency id="Superscribe" version="0.4.0" />	
+    <dependency id="Superscribe.Owin" version="0.4.0" /> 
     <dependency id="Microsoft.Owin" version="2.1.0" />
 	  <dependency id="Microsoft.AspNet.WebApi.Owin" version="5.1.1" />
     <dependency id="Microsoft.Net.Http" version="2.2.18" />
