--- a/Superscribe.Demo.WebApi.Owin/Superscribe.Demo.WebApi.Owin.csproj
+++ b/Superscribe.Demo.WebApi.Owin/Superscribe.Demo.WebApi.Owin.csproj
@@ -57,6 +57,7 @@
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Web.Http, Version=5.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.1.1\lib\net45\System.Web.Http.dll</HintPath>
