Added simplified syntax for setting ActionNames via final functions.

--- a/Superscribe.WebAPI/Superscribe.WebAPI2.csproj
+++ b/Superscribe.WebAPI/Superscribe.WebAPI2.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="Models\ActionNode.cs" />
     <Compile Include="Models\ControllerNode.cs" />
+    <Compile Include="To.cs" />
     <Compile Include="WebApiRouteData.cs" />
     <Compile Include="Internals\ActionSelectorCacheItem.cs" />
     <Compile Include="Internals\HttpControllerTypeCache.cs" />
