--- a/Superscribe.Tests.WebApi/Superscribe.Tests.WebApi2.csproj
+++ b/Superscribe.Tests.WebApi/Superscribe.Tests.WebApi2.csproj
@@ -88,6 +88,7 @@
     <Compile Include="RouteCombiningTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RouteConfig.cs" />
+    <Compile Include="SimplifiedSyntaxTests.cs" />
     <Compile Include="SuperscribeTestConfig.cs" />
     <Compile Include="Test.cs" />
   </ItemGroup>
