--- a/Superscribe.Owin/Superscribe.Owin.nuspec
+++ b/Superscribe.Owin/Superscribe.Owin.nuspec
@@ -9,12 +9,13 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Superscribe middleware routing and modules handler for OWIN</description>
     <dependencies>
-        <dependency id="Superscribe" version="0.4.2" />        
+        <dependency id="Superscribe" version="0.4.3" />        
         <dependency id="Owin" version="1.0.0" />
     </dependencies>
     <copyright>Pete Smith 2013</copyright>
   </metadata>
   <files>
     <file src="bin\Release\Superscribe.Owin.dll" target="lib\net45\Superscribe.Owin.dll" />
+    <file src="bin\Release\Superscribe.Owin.pdb" target="lib\net45\Superscribe.Owin.pdb" />
   </files>
 </package>
