--- a/Superscribe/Superscribe.nuspec
+++ b/Superscribe/Superscribe.nuspec
@@ -12,5 +12,6 @@
   </metadata>
   <files>
     <file src="bin\Release\Superscribe.dll" target="lib\net40\Superscribe.dll" />
+    <file src="bin\Release\Superscribe.pdb" target="lib\net40\Superscribe.pdb" />
   </files>
 </package>
