--- a/Superscribe.Tests.WebApi.Owin/packages.config
+++ b/Superscribe.Tests.WebApi.Owin/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.2.0" targetFramework="net45" />
+  <package id="Autofac.WebApi2" version="3.2.0" targetFramework="net45" />
+  <package id="DotNetDoodle.Owin.Dependencies" version="0.2.1-pre01" targetFramework="net45" />
+  <package id="DotNetDoodle.Owin.Dependencies.Adapters.WebApi" version="0.2.1-pre01" targetFramework="net45" />
+  <package id="DotNetDoodle.Owin.Dependencies.Autofac" version="0.2.1-pre01" targetFramework="net45" />
   <package id="Machine.Specifications" version="0.5.16" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.1.1" targetFramework="net45" />
