Replaced the RouteCache dependency with a dummy for now until it can be properly tested

--- a/Superscribe/Superscribe.csproj
+++ b/Superscribe/Superscribe.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Compile Include="Cache\CacheEntry.cs" />
     <Compile Include="Cache\RouteCache.cs" />
+    <Compile Include="Cache\UselessCache.cs" />
     <Compile Include="Engine\IModuleRouteData.cs" />
     <Compile Include="Engine\IRouteData.cs" />
     <Compile Include="Engine\IRouteDataProvider.cs" />
