It was quite a while ago so not really sure what this was, but it had something to do with F#

--- a/Superscribe/Superscribe.csproj
+++ b/Superscribe/Superscribe.csproj
@@ -36,6 +36,12 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants.cs" />
+    <Compile Include="Models\Filters\DomainModelFilter.cs" />
+    <Compile Include="Models\Filters\Filter.cs" />
+    <Compile Include="Models\Filters\MethodFilter.cs" />
+    <Compile Include="Utils\Extensions.cs" />
+    <Compile Include="When.cs" />
     <Compile Include="Cache\CacheEntry.cs" />
     <Compile Include="Cache\RouteCache.cs" />
     <Compile Include="Cache\UselessCache.cs" />
