--- a/Superscribe.Tests.Unit/Superscribe.Tests.Unit.csproj
+++ b/Superscribe.Tests.Unit/Superscribe.Tests.Unit.csproj
@@ -53,7 +53,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActivationFunctionTests.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="FinalFunctionTests.cs" />
+    <Compile Include="FiveLevelsOfMediaTypeTests.cs" />
     <Compile Include="HttpMethodTests.cs" />
     <Compile Include="ParameterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
